2012-08-22:
	* gpio driver

2012-07-21:
	* multiple ssid
	* cleanup /dev

2012-03-15:
	* disable CONFIG_IP_ROUTE_MULTIPATH_CACHED

2012-03-12:
	* backport bcm63xx_enet
	* remove ethctl, bcm_usb

2012-03-06:
	* remove brctl
	* port autofs5

2012-03-04:
	* add delay_use option of usb-storage

2012-03-02:
	* backport sd_spinup_disk
	* fix package config and verions
	* enable wds

2012-02-20:
	* remove ez-ipupdate in base system
	* make ez-ipupdate of 3322 a package

2012-02-19:
	* support new wireless encryption modes: psk/wep/none

2012-02-01:
	* upgrade to backfire 10.03.1

2011-11-22:
	* add ext2 for flash drives

2011-11-16:
	* add usb-serial, usb-serial-option to support 3g adaptors

2011-11-11
	* enable CONFIG_INOTIFY

2011-11-04:
	* btn_hotplug works
	* add -f, -i ifname to /sbin/wifi

2011-10-19:
	* enable macfilter/maclist of wireless config
	* port block-mount on trunk to support extroot

2011-10-18:
	* enable isolate option for wireless configuration

2011-10-17:
	* add ebtables

2011-10-15:
	* enable CONFIG_EFI_PARTITION to support GPT

2011-08-11:
	* add busybox applet: losetup, getopt

2011-08-10:
	* upgrade to 10.03.1-RC5
	* remove ntfs-3g, vi of busybox
	* add vim (multibyte enabled)
	* refactory the config dir

2011-06-28:
	* enable wait instruction

2011-06-14:
	* set suid/guid of busybox
	* add /etc/busybox.conf

2011-06-13:
	* enable CONFIG_BUSYBOX_CONFIG_FEATURE_ASSUME_UNICODE
	* add busybox applets: su add/deluser add/delgroup realpath
	* update Makefile to support oldcfe target (CFE 1.0.37-10.3)

2011-05-28:
	* enable CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_HELPERS
	* enable CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_LABEL
	* fix fat dependency to nls_base

2011-05-21:
	* fix vfat mount (add nls_base, nls_cp437)
	* fix max_scsi_luns to max_luns
	* add losetup in backfire config

2011-05-20:
	* add nls_utf8 in /etc/modules.d/90-usb-storage
	* remove nsl_ascii.ko

2011-05-17:
	* enable multiple luns by max_scsi_luns
	* add sr_mod/sg/st