@@ -1,4 +1,3 @@
-bcm96358vw2_btn
 bcm96358vw2_gpio
 #loop
 #tun
