@@ -1,4 +1,4 @@
-OpenWRT/2760U 1.1
+OpenWRT/2760U 1.2
 
 DSL2760: 1.04
 	http://ftp.dlink.ru/pub/ADSL/GPL_source_code/DSL-2760U_BRU_D/DLink_DSL-2760U_RU_1.04_GPL.zip
